# lyceumai

./: .env.example  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  run_braf_case.py
bioagent/cli/: display.py  main.py
bioagent/config/: settings.py
docs/: CONTRIBUTING.md  DEVELOPMENT.md  architecture.md
examples/: quickstart.py
paper/: cover_letter.txt  manuscript.tex
paper/supplementary/: S5_reproducibility.md
