[project]
name = "lyceumai"
version = "0.2.0"
description = "A peripatetic multi-agent system for end-to-end bioinformatics research"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nigmat Rahim", email = "nigmatrahim@stu.pku.edu.cn"},
]
maintainers = [
    {name = "Nigmat Rahim", email = "nigmatrahim@stu.pku.edu.cn"},
]
keywords = [
    "bioinformatics",
    "autonomous agents",
    "large language models",
    "langgraph",
    "multi-agent systems",
    "reproducible research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph~=1.0",
    "anthropic~=0.86",
    "openai~=2.14",
    "pydantic~=2.12",
    "pydantic-settings~=2.12",
    "typer~=0.21",
    "rich~=14.2",
    "matplotlib~=3.10",
    "seaborn~=0.13",
    "numpy>=1.26,<3.0",
    "pandas>=2.2",
    "biopython~=1.85",
    "httpx~=0.27",
    "tenacity~=9.0",
    "jinja2~=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/Nigmat-future/lyceumai"
Repository = "https://github.com/Nigmat-future/lyceumai"
Documentation = "https://github.com/Nigmat-future/lyceumai#readme"
Issues = "https://github.com/Nigmat-future/lyceumai/issues"

[project.scripts]
lyceumai = "bioagent.cli.main:app"
bioagent = "bioagent.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bioagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "api: marks tests that call external APIs (deselect with '-m \"not api\"')",
    "integration: marks end-to-end integration tests",
]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["bioagent"]
omit = ["tests/*", "examples/*", "benchmarks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
# fail_under is measured with `pytest -m "not api and not slow"` — the CI
# default. Running the full suite (including api/slow markers) exceeds 70%;
# the current floor is set to match the default CI configuration.
fail_under = 45

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
disallow_incomplete_defs = false
